--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# 生产者配置
+rocketmq.producer.isOnOff=on
+# 发送同一类消息的设置为同一个group，保证唯一
+rocketmq.producer.groupName= testGroup
+# 服务地址
+rocketmq.producer.namesrvAddr= 192.168.188.138:9876
+# 消息最大长度 默认1024*4(4M)
+rocketmq.producer.maxMessageSize= 4096
+# 发送消息超时时间,默认3000
+rocketmq.producer.sendMsgTimeout= 3000
+# 发送消息失败重试次数，默认2
+rocketmq.producer.retryTimesWhenSendFailed= 2
 
+
+# 消费者配置
+rocketmq.consumer.isOnOff= on
+# 官方建议：确保同一组中的每个消费者订阅相同的主题。
+rocketmq.consumer.groupName: testConsomer
+# 服务地址
+rocketmq.consumer.namesrvAddr: 192.168.188.138:9876
+
+rocketmq.consumer.consumeThreadMin= 20
+rocketmq.consumer.consumeThreadMax=64
+# 设置一次消费消息的条数，默认为1条
+rocketmq.consumer.consumeMessageBatchMaxSize= 1
+
+# 配置 Group  Topic  Tag
+rocket.group=rocketGroup
+rocket.topic= rocketTopic
+rocket.tag= rocketTag
