--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ rocketmq.producer.retryTimesWhenSendFailed= 2
 # 消费者配置
 rocketmq.consumer.isOnOff= on
 # 官方建议：确保同一组中的每个消费者订阅相同的主题。
-rocketmq.consumer.groupName: testConsomer
+rocketmq.consumer.groupName=testConsomer
 # 服务地址
-rocketmq.consumer.namesrvAddr: 192.168.188.138:9876
+rocketmq.consumer.namesrvAddr=192.168.188.138:9876
 
 rocketmq.consumer.consumeThreadMin= 20
 rocketmq.consumer.consumeThreadMax=64
